# bplus-searchrs

./: .env-example  3i.db  Cargo.toml  README.md  apis1.md  blank.db  cp-bin.sh  install.sh  notes.md  res2.db  run-bps.sh  search-apis.md  search-printlnrs
public/: index.html
src/: db.rs  llm.rs  main.rs  search.rs
win/: README.md
