[package]
name = "bplus-searchrs"
version = "0.3.0"
edition = "2021"

[dependencies]
# Web Server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = "0.4"

# Http Client & Serialization
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
# Added "backup" feature here
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# HTML Parsing
scraper = "0.19"

# Utilities
dotenvy = "0.15"
async-stream = "0.3"
futures = "0.3"
mime_guess = "2.0"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2" 

# Embedded Assets
rust-embed = "8.0"

# Error Handling
anyhow = "1.0"
